--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -598,6 +598,10 @@
     padding-top: 5rem;
   }
   
+  .article-page .header {
+    background-color: transparent;
+  }
+  
   @media only screen and (max-width: 767px) {
     .section-hero {
       margin: -0.1rem 0;
@@ -668,7 +672,7 @@
     transform: scale(1.2);
     transition: var(--transition-duration) var(--transition-cubic-bezier);
   }
-  
+
   .card-work .card-inner {
     position: absolute;
     top: -0.1rem;
@@ -678,7 +682,7 @@
     z-index: 1;
     transition: var(--transition-duration) var(--transition-cubic-bezier);
   }
-
+  
   .card-work .card-title {
     text-align: center;
     margin: 0;
@@ -692,13 +696,6 @@
     padding-top: 45%;
     opacity: 0;
   }
-
-  .card-work .card-title a:focus,
-  .card-work:hover .card-title a {
-    opacity: 1;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
   
   .card-work .card-title a::after {
     position: absolute;
@@ -707,6 +704,13 @@
     right: 0;
     bottom: 0;
     content: '';
+  }
+
+  .card-work .card-title a:focus,
+  .card-work:hover .card-title a {
+    opacity: 1;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
   }
   
   @media only screen and (max-width: 767px) {
@@ -723,10 +727,6 @@
     .card-work .card-title a {
       display: block;
       padding: 2rem 1rem 0 1rem;
-    }
-  
-    .card-work:hover .card-inner {
-      background-color: transparent;
     }
   
     .card-work:hover .card-image {
