--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,6 +1,10 @@
 /* Sass file that assigns the text color #3D3D3D to the HTML tags body and p */
 $text-color: #3D3D3D;
 
-body, p {
-	color: $text-color;
+body {
+  color: #3D3D3D;
+}
+
+p {
+  color: #3D3D3D;
 }
